src/test/ui/fn/implied-bounds-unnorm-associated-type-2.stderr
error[E0491]: in type `&'a &'b ()`, reference has a longer lifetime than the data it references
  --> $DIR/implied-bounds-unnorm-associated-type-2.rs:11:17
   |
LL | fn f<'a, 'b>(_: <&'a &'b () as Trait>::Type)
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime `'a` as defined here
  --> $DIR/implied-bounds-unnorm-associated-type-2.rs:11:6
   |
LL | fn f<'a, 'b>(_: <&'a &'b () as Trait>::Type)
   |      ^^
note: but the referenced data is only valid for the lifetime `'b` as defined here
  --> $DIR/implied-bounds-unnorm-associated-type-2.rs:11:10
   |
LL | fn f<'a, 'b>(_: <&'a &'b () as Trait>::Type)
   |          ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
